Background Issue
Not sure if this fixes the issue with the background not fitting depending on monitor width

--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -9,7 +9,8 @@
 }
 
 .LeagueBackground {
-    max-width: 100%;
+    width: auto;
+    max-height: 100%;
     object-fit: cover;
     position: relative;
 }
@@ -77,13 +78,13 @@ input[type=password]:focus {
 }
 
 .formButton {
-    height: 5vh;
+    height: 50px;
     text-align: center;
 }
 
 .sulButton {
     height: 100%;
-    width: 30%;
+    width: 130px;
     border-style: none;
     border-radius: 7px;
     font-family: Roboto Mono;
